// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trades desired is less but should not need to sell 1`] = `
Array [
  Object {
    "beliefValue": "90.500000000000000000",
    "buy": Object {
      "amount": "50000000.0000000000000000",
      "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
      "displayAmount": "50.000000000000000000",
      "symbol": "AKT",
      "value": "90.500000000000000000",
    },
    "sell": Object {
      "amount": "2470652.4706524706520000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "2.470652470652470652",
      "symbol": "ATOM",
      "value": "90.500000000000000000",
    },
  },
]
`;

exports[`trades needs two coins 1`] = `
Array [
  Object {
    "beliefValue": "90.500000000000000000",
    "buy": Object {
      "amount": "50000000.0000000000000000",
      "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
      "displayAmount": "50.000000000000000000",
      "symbol": "AKT",
      "value": "90.500000000000000000",
    },
    "sell": Object {
      "amount": "2470652.4706524706520000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "2.470652470652470652",
      "symbol": "ATOM",
      "value": "90.500000000000000000",
    },
  },
  Object {
    "beliefValue": "18.200000000000000000",
    "buy": Object {
      "amount": "2000000.0000000000000000",
      "denom": "uosmo",
      "displayAmount": "2.000000000000000000",
      "symbol": "OSMO",
      "value": "18.200000000000000000",
    },
    "sell": Object {
      "amount": "496860.4968604968600000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "0.496860496860496860",
      "symbol": "ATOM",
      "value": "18.200000000000000000",
    },
  },
]
`;

exports[`trades simple 1`] = `
Array [
  Object {
    "beliefValue": "90.500000000000000000",
    "buy": Object {
      "amount": "50000000.0000000000000000",
      "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
      "displayAmount": "50.000000000000000000",
      "symbol": "AKT",
      "value": "90.500000000000000000",
    },
    "sell": Object {
      "amount": "2470652.4706524706520000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "2.470652470652470652",
      "symbol": "ATOM",
      "value": "90.500000000000000000",
    },
  },
]
`;

exports[`trades trade3 1`] = `
Array [
  Object {
    "beliefValue": "4130.000000000000000000",
    "buy": Object {
      "amount": "112749112.7491127491130000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "112.749112749112749113",
      "symbol": "ATOM",
      "value": "4130.000000000000000000",
    },
    "sell": Object {
      "amount": "1000000000.0000000000000000",
      "denom": "ibc/EA3E1640F9B1532AB129A571203A0B9F789A7F14BB66E350DCBFA18E1A1931F0",
      "displayAmount": "1000.000000000000000000",
      "symbol": "CMDX",
      "value": "4130.000000000000000000",
    },
  },
  Object {
    "beliefValue": "9100.000000000000000000",
    "buy": Object {
      "amount": "248430248.4302484302480000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "248.430248430248430248",
      "symbol": "ATOM",
      "value": "9100.000000000000000000",
    },
    "sell": Object {
      "amount": "1000000000.0000000000000000",
      "denom": "uosmo",
      "displayAmount": "1000.000000000000000000",
      "symbol": "OSMO",
      "value": "9100.000000000000000000",
    },
  },
  Object {
    "beliefValue": "1422.000000000000000000",
    "buy": Object {
      "amount": "38820638.8206388206390000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "38.820638820638820639",
      "symbol": "ATOM",
      "value": "1422.000000000000000000",
    },
    "sell": Object {
      "amount": "2005534259.0947170673500000",
      "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
      "displayAmount": "2005.534259094717067350",
      "symbol": "STARS",
      "value": "1422.000000000000000000",
    },
  },
]
`;

exports[`trades trade3 diff order 1`] = `
Array [
  Object {
    "beliefValue": "7090.380000000000000000",
    "buy": Object {
      "amount": "193567567.5675675675680000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "193.567567567567567568",
      "symbol": "ATOM",
      "value": "7090.380000000000000000",
    },
    "sell": Object {
      "amount": "10000000000.0000000000000000",
      "denom": "ibc/987C17B11ABC2B20019178ACE62929FE9840202CE79498E29FE8E5CB02B7C0A4",
      "displayAmount": "10000.000000000000000000",
      "symbol": "STARS",
      "value": "7090.380000000000000000",
    },
  },
  Object {
    "beliefValue": "4130.000000000000000000",
    "buy": Object {
      "amount": "112749112.7491127491130000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "112.749112749112749113",
      "symbol": "ATOM",
      "value": "4130.000000000000000000",
    },
    "sell": Object {
      "amount": "1000000000.0000000000000000",
      "denom": "ibc/EA3E1640F9B1532AB129A571203A0B9F789A7F14BB66E350DCBFA18E1A1931F0",
      "displayAmount": "1000.000000000000000000",
      "symbol": "CMDX",
      "value": "4130.000000000000000000",
    },
  },
  Object {
    "beliefValue": "3431.620000000000000000",
    "buy": Object {
      "amount": "93683319.6833196833200000",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": "93.683319683319683320",
      "symbol": "ATOM",
      "value": "3431.620000000000000000",
    },
    "sell": Object {
      "amount": "377101098.9010989010990000",
      "denom": "uosmo",
      "displayAmount": "377.101098901098901099",
      "symbol": "OSMO",
      "value": "3431.620000000000000000",
    },
  },
]
`;
